<resources>
    <string name="ab_test_activity_label">AB Test</string>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_promise_explanation">"The app for this icon isn't installed. You can remove it, or search for the app and install it manually."</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_search">Search</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="activity_not_found">"App isn't installed."</string>
    <string name="ad">Ad</string>
    <string name="admin_receiver_status_disable_warning">Warning: the Device Admin is required in order for the \"Lock\" feature to work. Deactivating this will require reactivation in order for the \"Lock\" feature to work again.</string>
    <string name="advertisement">Advertisement</string>
    <string name="all_apps">All Apps</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="all_apps_new_section">NEW</string>
    <string name="all_apps_set_default_launcher_text">Set Evie as your default launcher for a simpler, faster home screen.</string>
    <string name="announce_selection">Selected %1$s</string>
    <string name="app_filter_class" />
    <string name="app_name">Evie</string>
    <string name="app_options_app_info">App info</string>
    <string name="app_options_change_icon">Change icon</string>
    <string name="app_options_label">App options</string>
    <string name="app_options_uninstall">Uninstall</string>
    <string name="app_settings_alert_dialog_double_tap_cancel">Cancel</string>
    <string name="app_settings_alert_dialog_double_tap_msg">Locks immediately. Requires PIN/Pattern to unlock, fingerprint will NOT work.</string>
    <string name="app_settings_alert_dialog_double_tap_ok">Enable</string>
    <string name="app_settings_badge_configure_gmail">Configure Gmail</string>
    <string name="app_settings_badge_notification_permission_button">Enable access</string>
    <string name="app_settings_badge_notification_permission_description">To enable unread badges, you must grant Evie access to read your notifications.</string>
    <string name="app_settings_badge_section_notification">Notification count</string>
    <string name="app_settings_badge_section_notification_description">"Evie infers a badge count based on an app's notifications."</string>
    <string name="app_settings_badge_section_unread">Unread count</string>
    <string name="app_settings_badge_section_unread_description">Evie receives a reliable unread count from these apps.</string>
    <string name="app_settings_badge_style">Badge style</string>
    <string name="app_settings_badge_style_count">Count</string>
    <string name="app_settings_badge_style_dots">Dots</string>
    <string name="app_settings_dock_background_alpha">Background Opacity</string>
    <string name="app_settings_dock_background_blur">Blur Background</string>
    <string name="app_settings_gestures_custom_coming_soon_subtext">"We'll be including custom gestures so that you can customize as you please :)"</string>
    <string name="app_settings_gestures_custom_coming_soon_title">Coming Soon!</string>
    <string name="app_settings_gestures_dialog_lock_type">Select Screen Lock Method</string>
    <string name="app_settings_gestures_double_tap_experimental_subtext">Allows fingerprint scanners to unlock. Takes %1$s seconds before unlock is enabled.</string>
    <string name="app_settings_gestures_double_tap_experimental_title">Timeout lock method</string>
    <string name="app_settings_gestures_double_tap_lock_type_device_admin_title">Instant Lock</string>
    <string name="app_settings_gestures_double_tap_lock_type_timeout_description">Locks after a 5-10 second (black screen) delay. Fingerprint works.</string>
    <string name="app_settings_gestures_double_tap_lock_type_timeout_title">Timer Lock</string>
    <string name="app_settings_gestures_double_tap_title">Double tap to lock</string>
    <string name="app_settings_gestures_home_to_search_title">Home button to search</string>
    <string name="app_settings_gestures_swipe_up_subtext">Swiping up with two fingers on the home screen to open Google Now.</string>
    <string name="app_settings_gestures_swipe_up_title">Two fingers swipe up for Google Now</string>
    <string name="app_settings_hide_apps">Hide apps</string>
    <string name="app_settings_hide_apps_dialog_confirm">Some apps you’ve selected to hide are on your home screen. Would you like to keep or remove them?</string>
    <string name="app_settings_hide_apps_dialog_confirm_keep">Keep</string>
    <string name="app_settings_hide_apps_dialog_confirm_remove">Remove</string>
    <string name="app_settings_hide_apps_hide_from_search">Hide from search</string>
    <string name="app_settings_hide_apps_hide_from_search_subtext">Do not show hidden apps in search</string>
    <string name="app_settings_home_screen_layout_columns">Columns</string>
    <string name="app_settings_home_screen_layout_icon_size">Icon Size</string>
    <string name="app_settings_home_screen_layout_rows">Rows</string>
    <string name="app_settings_item_about_title">About</string>
    <string name="app_settings_item_app_drawer_display_style">Display style</string>
    <string name="app_settings_item_app_drawer_display_style_dialog_title">Select display style</string>
    <string name="app_settings_item_app_drawer_display_style_grid">Grid</string>
    <string name="app_settings_item_app_drawer_display_style_list">List</string>
    <string name="app_settings_item_app_drawer_error_grid_only">Grid Layout Only</string>
    <string name="app_settings_item_app_drawer_index_style">Index style</string>
    <string name="app_settings_item_app_drawer_index_style_classic_scrollbar">Classic scrollbar</string>
    <string name="app_settings_item_app_drawer_index_style_dialog_title">Select index style</string>
    <string name="app_settings_item_app_drawer_index_style_vertical_letters">Vertical letters</string>
    <string name="app_settings_item_app_drawer_show_new_apps">Show new apps</string>
    <string name="app_settings_item_app_drawer_title">App drawer</string>
    <string name="app_settings_item_backup_restore_account">Google Account</string>
    <string name="app_settings_item_backup_restore_account_dialog">Google &amp; Evie</string>
    <string name="app_settings_item_backup_restore_account_dialog_negative">Sign out</string>
    <string name="app_settings_item_backup_restore_account_dialog_positive">Done</string>
    <string name="app_settings_item_backup_restore_account_dialog_subtext">"We use your Google Account only for backup and restore. You're currently logged in as %1$s."</string>
    <string name="app_settings_item_backup_restore_account_subtext">"You're currently logged in as %1$s"</string>
    <string name="app_settings_item_backup_restore_backup">Backup now</string>
    <string name="app_settings_item_backup_restore_backup_failure_dialog">Backup failed</string>
    <string name="app_settings_item_backup_restore_backup_failure_dialog_positive">Okay</string>
    <string name="app_settings_item_backup_restore_backup_failure_dialog_subtext">Unfortunately your backup could not be saved. Please contact us for help.</string>
    <string name="app_settings_item_backup_restore_backup_progress">Backing up your settings...</string>
    <string name="app_settings_item_backup_restore_backup_subtext">Save your home screen layout and settings.</string>
    <string name="app_settings_item_backup_restore_backup_success_dialog">Backup successful!</string>
    <string name="app_settings_item_backup_restore_backup_success_dialog_positive">Okay</string>
    <string name="confab_generic_error_button">Try again</string>
    <string name="confab_generic_error_subtext">Try checking your network connectivity.</string>
    <string name="confab_generic_error_text">Something went wrong</string>
    <string name="onboarding_permission_deny_access">Deny Access</string>
    <string name="onboarding_permission_grant_access">Grant Access</string>
    <string name="onboarding_permission_title">Evie needs a little help from you.</string>
    <string name="open_advertisement_link">Open advertisement link</string>
    <string name="pause_advertisement">pause advertisement</string>
    <string name="play_advertisement">play advertisement</string>
    <string name="ss_back_to_top">Back to top</string>
    <string name="ss_bottom_bar_personalize_onboarding_subtitle">Let us know what you want to read!</string>
    <string name="ss_bottom_bar_personalize_onboarding_title">Personalize your feed!</string>
    <string name="ss_error_no_internet">No internet connection.</string>
    <string name="ss_follow_button_blocked">Blocked</string>
    <string name="ss_follow_button_follow">Follow</string>
    <string name="ss_follow_button_following">Following</string>
    <string name="ss_personalize_search_hint">Search for anything…</string>
    <string name="ss_personalize_tooltip_subtext">Let us know your interests!</string>
    <string name="ss_personalize_tooltip_text">What do you like to read?</string>
    <string name="ss_start">Start</string>
</resources>