<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:id="@id/search_bar" android:background="@drawable/ss_topic_search_field_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.AppCompatImageView android:layout_gravity="center_vertical" android:id="@id/search_button" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/homescreen_search_icon" android:contentDescription="@string/abc_searchview_description_search" style="?actionButtonStyle" />
    <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@id/search_plate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
        <EditText android:textSize="17.0sp" android:ellipsize="end" android:layout_gravity="center_vertical" android:id="@id/search_src_text" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/ss_personalize_search_hint" android:singleLine="true" android:layout_weight="1.0" android:inputType="textNoSuggestions" android:imeOptions="actionSearch" android:fontFamily="sans-serif-light" />
        <androidx.appcompat.widget.AppCompatImageView android:layout_gravity="center_vertical" android:id="@id/search_close_btn" android:background="?selectableItemBackgroundBorderless" android:paddingLeft="0.0dip" android:paddingRight="0.0dip" android:focusable="true" android:layout_width="32.0dip" android:layout_height="32.0dip" android:layout_marginLeft="8.0dip" android:layout_marginRight="2.0dip" android:scaleType="centerCrop" android:contentDescription="@string/abc_searchview_description_clear" android:alpha="1.0" />
    </LinearLayout>
</LinearLayout>
