<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:contentDescription="@string/open_advertisement_link"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ProgressBar android:id="@id/ad_progress_bar" android:padding="12.0dip" android:visibility="visible" android:layout_width="54.0dip" android:layout_height="54.0dip" android:indeterminateDrawable="@drawable/ad_loading_animation" style="@style/AdControlProgressBar" />
    <com.aol.mobile.sdk.controls.view.TintableImageButton android:id="@id/ad_play_button" android:src="@drawable/ic_ad_play" android:contentDescription="@string/play_advertisement" style="@style/AdControlButton" />
    <com.aol.mobile.sdk.controls.view.TintableImageButton android:id="@id/ad_pause_button" android:src="@drawable/ic_ad_pause" android:contentDescription="@string/pause_advertisement" style="@style/AdControlButton" />
    <SeekBar android:id="@id/ad_seekbar" android:padding="0.0dip" android:focusable="false" android:clickable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="@dimen/ad_seekbar_right_mar" android:progressDrawable="@drawable/ad_seeker" android:thumb="@null" android:thumbOffset="0.0dip" android:layout_toRightOf="@id/ad_progress_bar" android:layout_above="@id/ad_time_left" style="?android:progressBarStyleHorizontal" />
    <TextView android:textSize="@dimen/ad_time_left_text_size" android:textStyle="bold" android:id="@id/ad_time_left" android:paddingRight="@dimen/ad_time_left_right_pad" android:paddingBottom="@dimen/ad_time_left_bottom_pad" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/ad_time_left_right_mar" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
    <TextView android:textSize="@dimen/ad_title_text_size" android:textColor="@android:color/white" android:ellipsize="end" android:gravity="center|left|top" android:id="@id/ad_title" android:paddingBottom="@dimen/ad_title_bottom_pad" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/advertisement" android:maxLines="1" android:layout_toLeftOf="@id/ad_time_left" android:layout_toRightOf="@id/ad_progress_bar" android:layout_alignParentBottom="true" />
    <FrameLayout android:id="@id/clickthrough_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerInParent="true" />
    <FrameLayout android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerInParent="true">
        <com.aol.mobile.sdk.controls.view.TintableImageButton android:layout_gravity="center|right|top" android:id="@id/clickthrough_close" android:visibility="gone" android:layout_margin="8.0dip" android:src="@drawable/ic_ad_close" style="@style/AdControlButton" />
    </FrameLayout>
</RelativeLayout>
