<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:padding="@dimen/ss_base_spacing" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/ss_bottom_bar_personalize_onboarding_title" app:layout_constraintBottom_toTopOf="@id/subtitle" app:layout_constraintEnd_toStartOf="@id/button" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed" style="@style/SSPosterTileTitleTextAppearance" />
        <TextView android:id="@id/subtitle" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/ss_bottom_bar_personalize_onboarding_subtitle" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/button" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title" style="@style/SSTileSubtitleTextAppearance" />
        <Button android:id="@id/button" android:background="@drawable/ss_button_background" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="0.0dip" android:minHeight="40.0dip" android:text="@string/ss_start" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/SSButtonTextAppearance" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View android:layout_gravity="top" android:background="@color/ss_rail_divider" android:layout_width="fill_parent" android:layout_height="1.0px" />
</FrameLayout>
