<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_gravity="center" android:id="@id/follow" android:background="?followButtonBackground" android:paddingLeft="12.0dip" android:paddingTop="6.0dip" android:paddingRight="12.0dip" android:paddingBottom="6.0dip" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textAppearance="@style/SSFollowButtonFollowTextAppearance" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ss_follow_button_follow" />
    </FrameLayout>
    <FrameLayout android:layout_gravity="center" android:id="@id/following" android:background="?followingButtonBackground" android:paddingLeft="12.0dip" android:paddingTop="6.0dip" android:paddingRight="12.0dip" android:paddingBottom="6.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textAppearance="@style/SSFollowButtonFollowingTextAppearance" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ss_follow_button_following" />
    </FrameLayout>
    <FrameLayout android:layout_gravity="center" android:id="@id/blocked" android:background="?blockedButtonBackground" android:paddingLeft="12.0dip" android:paddingTop="6.0dip" android:paddingRight="12.0dip" android:paddingBottom="6.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textAppearance="@style/SSFollowButtonBlockedTextAppearance" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ss_follow_button_blocked" />
    </FrameLayout>
</FrameLayout>
