<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/base_spacing" android:layout_marginRight="@dimen/base_spacing"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/confab_content" android:background="@drawable/dialog_background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignBottom="@id/confab_buttons" android:layout_alignParentTop="true" />
    <ImageView android:id="@id/confab_image" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-30.0dip" android:layout_marginBottom="@dimen/base_spacing" android:layout_centerHorizontal="true" />
    <ImageView android:id="@id/confab_dismiss" android:padding="@dimen/base_spacing" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/dialog_close" android:layout_alignTop="@id/confab_content" android:layout_alignEnd="@id/confab_content" />
    <TextView android:id="@id/confab_text" android:paddingLeft="@dimen/double_spacing" android:paddingRight="@dimen/double_spacing" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/base_spacing" android:layout_marginRight="@dimen/base_spacing" android:layout_marginBottom="@dimen/base_spacing" android:text="@string/confab_generic_error_text" android:layout_below="@id/confab_image" android:layout_centerHorizontal="true" style="@style/ConfabText" />
    <TextView android:scrollbarStyle="outsideOverlay" android:id="@id/confab_subtext" android:paddingLeft="@dimen/double_spacing" android:paddingRight="@dimen/double_spacing" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/base_spacing" android:layout_marginRight="@dimen/base_spacing" android:layout_marginBottom="@dimen/double_spacing" android:text="@string/confab_generic_error_subtext" android:maxLines="15" android:layout_below="@id/confab_text" android:layout_centerHorizontal="true" style="@style/ConfabSubtext" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:id="@id/confab_buttons" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/confab_subtext">
        <Button android:id="@id/confab_positive_button" android:text="@string/confab_generic_error_button" style="@style/ConfabButton" />
        <Button android:id="@id/confab_negative_button" android:visibility="gone" android:layout_marginStart="20.0dip" style="@style/ConfabButton.Negative" />
    </LinearLayout>
</RelativeLayout>
