<?xml version="1.0" encoding="utf-8"?>
<androidx.percentlayout.widget.PercentRelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/onboarding_permission_image" android:layout_marginTop="30.0dip" android:src="@drawable/onboarding_launcher_icon" android:scaleType="fitCenter" app:layout_heightPercent="20.000004%" app:layout_widthPercent="100.0%" />
    <TextView android:textSize="24.0sp" android:textStyle="bold" android:textColor="#ff000000" android:gravity="center" android:id="@id/onboarding_permission_title" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="30.0dip" android:text="@string/onboarding_permission_title" android:layout_below="@id/onboarding_permission_image" android:layout_centerHorizontal="true" android:fontFamily="sans-serif" app:layout_widthPercent="70.00001%" />
    <LinearLayout android:orientation="vertical" android:id="@id/onboarding_permission_item_layout" android:paddingLeft="30.0dip" android:paddingTop="30.0dip" android:paddingRight="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/onboarding_permission_title">
        <include android:id="@id/onboarding_permission_storage_item" android:visibility="gone" layout="@layout/onboarding_permission_item" />
        <include android:id="@id/onboarding_permission_location_item" layout="@layout/onboarding_permission_item" />
        <include android:id="@id/onboarding_permission_contacts_item" layout="@layout/onboarding_permission_item" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/onboarding_permission_buttons" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <RelativeLayout android:id="@id/onboarding_permission_negative_button_layout" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <Button android:textSize="18.0sp" android:textColor="@color/subtext_color" android:id="@id/onboarding_permission_negative_button" android:background="@drawable/onboarding_negative_button_bg" android:paddingTop="15.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="0.0dip" android:text="@string/onboarding_permission_deny_access" android:textAllCaps="false" />
            <View android:background="#ffecf0f1" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        </RelativeLayout>
        <Button android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/onboarding_permission_positive_button" android:background="@drawable/onboarding_tutorial_next_bg" android:paddingTop="15.0dip" android:paddingBottom="20.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:minHeight="0.0dip" android:text="@string/onboarding_permission_grant_access" android:layout_weight="1.0" android:layout_alignParentBottom="true" android:textAllCaps="false" />
    </LinearLayout>
</androidx.percentlayout.widget.PercentRelativeLayout>
