<?xml version="1.0" encoding="utf-8"?>
<com.voxel.simplesearchlauncher.view.WindowInsetPolicyFrameLayout android:focusable="true" android:fitsSystemWindows="false" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.evie.sidescreen.ClippingSwipeRefreshLayout android:id="@id/refresher" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/ss_base_spacing" android:layout_marginRight="@dimen/ss_base_spacing" app:clipping="@dimen/ss_refresher_end_clipping">
        <androidx.recyclerview.widget.RecyclerView android:id="@id/recycler_view" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </com.evie.sidescreen.ClippingSwipeRefreshLayout>
    <FrameLayout android:layout_gravity="bottom" android:id="@id/error_view" android:background="#ffe62536" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="30.0sp">
        <TextView android:textAppearance="@style/SSTextStyleMedium" android:textSize="15.0sp" android:textColor="@android:color/white" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ss_error_no_internet" />
    </FrameLayout>
    <com.voxel.simplesearchlauncher.view.WindowInsetPolicyFrameLayout android:id="@id/back_to_top_inset" android:fitsSystemWindows="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <FrameLayout android:layout_gravity="center_horizontal" android:id="@id/back_to_top" android:background="@drawable/ss_back_to_top" android:padding="@dimen/ss_half_spacing" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/ss_double_spacing">
            <TextView android:textAppearance="@style/SSTextStyleRegular" android:textSize="14.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center" android:paddingLeft="10.0dip" android:paddingTop="2.0dip" android:paddingRight="10.0dip" android:paddingBottom="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ss_back_to_top" />
        </FrameLayout>
    </com.voxel.simplesearchlauncher.view.WindowInsetPolicyFrameLayout>
    <LinearLayout android:gravity="end" android:layout_gravity="end" android:orientation="vertical" android:id="@id/personalize_tooltip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="4.0dip" android:alpha="0.0">
        <androidx.appcompat.widget.AppCompatImageView android:layout_gravity="end" android:layout_width="12.0dip" android:layout_height="6.0dip" android:scaleType="fitXY" android:layout_marginEnd="50.0dip" app:srcCompat="@drawable/ss_personalize_tooltip_arrow" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/personalize_tooltip_body" android:background="@drawable/ss_personalize_tooltip" android:padding="@dimen/ss_base_and_half_spacing" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textAppearance="@style/SSPersonalizeTooltipTextAppearance" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ss_personalize_tooltip_text" />
            <TextView android:textAppearance="@style/SSPersonalizeTooltipSubTextAppearance" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ss_personalize_tooltip_subtext" />
        </LinearLayout>
    </LinearLayout>
    <FrameLayout android:layout_gravity="bottom" android:id="@id/tabs_container" android:background="@android:color/white" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.google.android.material.tabs.TabLayout android:id="@id/tabs" android:background="@android:color/white" android:fadingEdgeLength="40.0dip" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:requiresFadingEdge="horizontal" app:tabGravity="center" app:tabIndicatorColor="@color/evie_sky_blue" app:tabIndicatorGravity="top" app:tabIndicatorHeight="3.0dip" app:tabMode="scrollable" />
    </FrameLayout>
    <FrameLayout android:layout_gravity="bottom" android:id="@id/bottom_bar_container" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <com.voxel.simplesearchlauncher.view.WindowInsetPolicyFrameLayout android:id="@id/popup" android:fitsSystemWindows="false" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</com.voxel.simplesearchlauncher.view.WindowInsetPolicyFrameLayout>
